# gimpsep-gomp

./: CMakeLists.txt  README.md
includes/: CannyEdgeOperation.h  DilationOperation.h  ErosionOperation.h  FileHelper.h  ImageEditor.h  LightenDarkenOperation.h  Operation.h  PanoramaSticher.h  PanoramaStitcher.h  ResizeOperation.h
src/: CannyEdgeOperation.cpp  DilationOperation.cpp  ErosionOperation.cpp  FileHelper.cpp  ImageEditor.cpp  LightenDarkenOperation.cpp  Operation.cpp  PanoramaSticher.cpp  PanoramaStitcher.cpp  ResizeOperation.cpp  main.cpp
